Update thesis post

--- a/_posts/2017-02-06-thesis.md
+++ b/_posts/2017-02-06-thesis.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Thesis: An Analysis of Pairwise Preference"
+title: "Master's Thesis"
 comments: true
 categories: blog
 tags:
@@ -10,10 +10,6 @@ tags:
 
 ---
 
-I am very happy to announce that I have completed a thesis.
-Titled "An Analysis of Pairwise Preference", it describes a theory of decision-making which allows for the formal analysis of subjective preferences.
-As an academic work, it is an exercise in developing a theory from first principles, demonstrating a grasp of method and rigor.
+I am very happy to announce that I have completed a master's thesis. Titled "An Analysis of Pairwise Preference", it describes a theory of decision-making which allows for the formal analysis of subjective preferences. As an academic work, it is an exercise in developing a theory from first principles, demonstrating a grasp of method and rigor. The experience of writing it was excellent.
 
-The thesis consists of data, code, and tex. You can find the [thesis repository](https://github.com/kronosapiens/thesis) on GitHub, and the text [here](http://nbviewer.jupyter.org/github/kronosapiens/thesis/blob/master/tex/thesis.pdf).
-
-All code is free for reuse. Any feedback would be welcome!
+The thesis consists of [data](https://github.com/kronosapiens/thesis/tree/master/data), [code](https://github.com/kronosapiens/thesis/tree/master/code), and [tex](http://nbviewer.jupyter.org/github/kronosapiens/thesis/blob/master/tex/thesis.pdf). Feedback welcome.
