Add abstract to thesis post

--- a/_posts/2017-02-06-thesis.md
+++ b/_posts/2017-02-06-thesis.md
@@ -12,4 +12,8 @@ tags:
 
 I am very happy to announce that I have completed a master's thesis. Titled "An Analysis of Pairwise Preference", it describes a theory of decision-making which allows for the formal analysis of subjective preferences. As an academic work, it is an exercise in developing a theory from first principles, demonstrating a grasp of method and rigor. The experience of writing it was excellent.
 
+**Abstract:**
+
+> Human coordination can be thought of as a problem in information processing. The subjective interiors of the entities involved creates challenges for formal analysis of preference. This work develops theoretical foundations for analysis of subjective preference, and develops and evaluates a number of algorithms for undertaking such analyses.
+
 The thesis consists of [data](https://github.com/kronosapiens/thesis/tree/master/data), [code](https://github.com/kronosapiens/thesis/tree/master/code), and [tex](http://nbviewer.jupyter.org/github/kronosapiens/thesis/blob/master/tex/thesis.pdf). Feedback welcome.
