Update thesis link

--- a/_posts/2017-02-06-thesis.md
+++ b/_posts/2017-02-06-thesis.md
@@ -10,7 +10,7 @@ tags:
 
 ---
 
-I am very happy to announce that I have completed a master's thesis. Titled "An Analysis of Pairwise Preference", it describes a theory of decision-making which allows for the formal analysis of subjective preferences. As an academic work, it is an exercise in developing a theory from first principles, demonstrating a grasp of method and rigor. The experience of writing it was excellent.
+I am very happy to announce that I have completed a [master's thesis](http://nbviewer.jupyter.org/github/kronosapiens/thesis/blob/master/tex/thesis.pdf). Titled "An Analysis of Pairwise Preference", it describes a theory of decision-making which allows for the formal analysis of subjective preferences. As an academic work, it is an exercise in developing a theory from first principles, demonstrating a grasp of method and rigor. The experience of writing it was excellent.
 
 **Abstract:**
 
