--- a/_posts/2018-03-16-pow-vs-pos.md
+++ b/_posts/2018-03-16-pow-vs-pos.md
@@ -16,7 +16,7 @@ I.
 
 I went to an amazing debate tonight at Grand Central Tech.
 
-Hosted by Crypto NYC, the event pit Proof of Work advocate Matt Corallo against Proof of State advocate Nate Rush in an engaging debate over arguably the most important question facing the blockchain community.
+Hosted by Crypto NYC, the event pit two prominent Proof of Work advocates against Proof of State advocate Nate Rush in an engaging debate over arguably the most important question facing the blockchain community.
 
 For those unfamiliar, “Proof of Work” and “Proof of Stake” are types of what is known as a “consensus algorithm”: a set of rules for how a blockchain decides what transactions become “canonical” and which do not. A blockchain’s consensus algorithm is a little bit like its constitution: the fundamental rules which define it and determine its behavior.
 
