--- a/_posts/2017-02-06-thesis.md
+++ b/_posts/2017-02-06-thesis.md
@@ -16,4 +16,4 @@ I am very happy to announce that I have completed a [master's thesis](http://nbv
 
 > Human coordination can be thought of as a problem in information processing. The subjective interiors of the entities involved creates challenges for formal analysis of preference. This work develops theoretical foundations for analysis of subjective preference, and develops and evaluates a number of algorithms for undertaking such analyses.
 
-The thesis consists of [data](https://github.com/kronosapiens/thesis/tree/master/data), [code](https://github.com/kronosapiens/thesis/tree/master/code), and [tex](http://nbviewer.jupyter.org/github/kronosapiens/thesis/blob/master/tex/thesis.pdf). Feedback welcome.
+The thesis consists of [data](https://github.com/kronosapiens/thesis/tree/master/data), [code](https://github.com/kronosapiens/thesis/tree/master/code), and [tex](/thesis.pdf). Feedback welcome.
